--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -4,4 +4,10 @@
     width: 100%;
     word-break: break-all;
   }
+  .navs {
+    margin-top: 20px;
+    a {
+      font-size: 20px;
+    }
+  }
 }
