--- a/src/components/ProposalResults/index.less
+++ b/src/components/ProposalResults/index.less
@@ -15,7 +15,7 @@
 
 .vote-item {
   margin-bottom: 12px;
-  width: 200px;
+  // width: 200px;
   .vote-data-container {
     display: flex;
     width: 100%;
