--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,3 +1,7 @@
+.layout {
+  max-width: 800px;
+  margin: 0 auto;
+}
 .navs {
   ul {
     padding: 0;
@@ -10,9 +14,12 @@
 }
 
 .page-container {
+  position: relative;
   padding: 20px;
 }
 
 .page-title {
   margin-bottom: 20px;
+  font-size: 2em;
+  font-weight: 500;
 }
