--- a/src/pages/daos/index.less
+++ b/src/pages/daos/index.less
@@ -6,6 +6,7 @@
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 10px;
+    margin-bottom: 15px;
     cursor: pointer;
     :hover {
       background-color: #ccc;
