--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -18,9 +18,31 @@ html {
   }
 
   body {
+    font-family: "Poppins";
+    font-style: normal;
     overflow-x: hidden;
     font-family: var(--main-font), sans-serif;
-
+    .primary-btn {
+      background: #343edf;
+      border-radius: 20px;
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 21px;
+      color: #ffffff;
+      height: 50px;
+    }
+    .default-btn {
+      background: #f8f9ff;
+      border-radius: 24px;
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 21px;
+      color: #343edf;
+    }
     .ant-modal-content {
       border-radius: 10px;
     }
