--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -19,7 +19,14 @@
 }
 
 .page-title {
-  margin-bottom: 20px;
-  font-size: 2em;
-  font-weight: 500;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: #19163d;
 }
