--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -45,6 +45,14 @@ html {
     }
     .ant-modal-content {
       border-radius: 10px;
+      background: #f9f9f9;
+      /* ✨ Styles/Card shadow 2 */
+
+      box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+      border-radius: 24px;
+    }
+    .ant-form-item {
+      margin-bottom: 17px;
     }
     .ant-picker-datetime-panel {
       width: 100vw;
