--- a/src/components/ProposalFormItems/index.less
+++ b/src/components/ProposalFormItems/index.less
@@ -7,6 +7,10 @@
       height: 40px;
       margin-right: 15px;
     }
+    > .btn-save {
+      background-color: #23d288;
+      border-color: #23d288;
+    }
   }
   > .items-list {
     > li {
