--- a/src/components/ProposalResults/index.less
+++ b/src/components/ProposalResults/index.less
@@ -1,14 +1,19 @@
 .proposal-results-container {
   background: #ffffff;
-  border: 1px solid #e5e5e5;
-  border-radius: 8px;
+  /* ✨ Styles/Card shadow 2 */
+
+  box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+  border-radius: 12px;
   padding: 15px;
   .title {
     font-family: Poppins;
     font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    color: #22304a;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 18px;
+    /* identical to box height */
+
+    color: #161240;
     margin-bottom: 8px;
   }
 }
