--- a/src/components/Back/index.less
+++ b/src/components/Back/index.less
@@ -1,5 +1,14 @@
 .back-btn {
   position: absolute;
-  top: 22px;
-  right: 20px;
+  top: 39px;
+  left: 28px;
+  background: #ffffff;
+  box-shadow: 0px 1px 2px rgba(8, 15, 24, 0.1);
+  border-radius: 12px;
+  width: 38px;
+  height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
 }
