--- a/src/components/ProposalDetailDialog/index.less
+++ b/src/components/ProposalDetailDialog/index.less
@@ -3,52 +3,62 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 8px;
+    .end-time {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 18px;
+      color: #161240;
+    }
+    > img {
+      cursor: pointer;
+      width: 12px;
+      height: 12px;
+      margin-bottom: 9px;
+    }
+  }
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
     .header-left {
-      .end-time {
-        font-family: "Poppins";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 18px;
-        color: #798488;
-      }
       .title {
-        font-family: "Poppins";
-        font-style: normal;
-        font-weight: 600;
+        font-weight: 700;
         font-size: 20px;
-        line-height: 20px;
-        color: #22304a;
-        margin-top: 10px;
-        margin-bottom: 14px;
+        line-height: 30px;
+        /* identical to box height */
+
+        text-align: center;
+
+        color: #161240;
+        margin-bottom: 8px;
       }
       .total-supporter {
-        font-family: "Poppins";
-        font-style: normal;
         font-weight: 500;
         font-size: 12px;
         line-height: 18px;
-        color: #9d5fe9;
+        /* identical to box height */
+
+        color: #343edf;
       }
     }
+
     .header-right {
       text-align: right;
-      > img {
-        cursor: pointer;
-        width: 12px;
-        height: 12px;
-        margin-bottom: 25px;
+      > div {
+        margin-bottom: 0;
       }
     }
   }
   .divide-line {
     width: 100%;
     height: 1px;
-    background-color: #dedede;
-    margin-top: 20px;
+    border: 1px dashed #b8b8b8;
+    margin-top: 13px;
+    margin-bottom: 13px;
   }
   .desc {
-    padding: 20px;
+    margin-bottom: 10px;
   }
   .vote-submit-results-container {
     display: flex;
