--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -15,7 +15,7 @@
 
 .page-container {
   position: relative;
-  padding: 20px;
+  padding: 39px 28px;
 }
 
 .page-title {
@@ -24,9 +24,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 36px;
-  /* identical to box height */
-
-  text-align: center;
-
   color: #19163d;
+  padding-left: 54px;
+  margin-bottom: 25px;
 }
