--- a/src/pages/proposalCreate/index.less
+++ b/src/pages/proposalCreate/index.less
@@ -1,7 +1,14 @@
 .new-proposal-container {
   .banner {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    padding: 8px 10px;
+    margin-bottom: 24px;
+    background: #ffffff;
+    /* ✨ Styles/Card shadow 2 */
+
+    box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+    border-radius: 12px;
     > img {
       width: 80px;
       height: 80px;
@@ -9,12 +16,49 @@
       display: inline-block;
       margin-right: 10px;
     }
+    > p {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px;
+      color: #161240;
+      flex: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
   .proposal-footer-btns {
     display: flex;
     justify-content: center;
-    > button:first-child {
-      margin-right: 20px;
+    > .btn-create {
+      width: 140px;
+      height: 40px;
     }
+    > .btn-cancel {
+      width: 140px;
+      height: 40px;
+    }
+    > button:first-child {
+      margin-right: 17px;
+    }
+  }
+}
+.dao-form-input {
+  border: 1px solid #343edf;
+  /* ✨ Styles/Card shadow 2 */
+
+  box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+  border-radius: 12px;
+  height: 48px;
+}
+.proposal-form-selector {
+  .ant-select-selector {
+    border: 1px solid #343edf !important;
+    /* ✨ Styles/Card shadow 2 */
+    height: 48px !important;
+    box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+    border-radius: 12px !important;
+    display: flex;
+    align-items: center;
   }
 }
