--- a/src/pages/webProposals/index.less
+++ b/src/pages/webProposals/index.less
@@ -9,7 +9,7 @@
     > img {
       width: 80px;
       height: 80px;
-      margin-right: 30px;
+      margin-right: 19px;
     }
     .dao-detail-back {
       height: 32px;
@@ -20,11 +20,11 @@
       > .dao-name {
         font-family: "Poppins";
         font-style: normal;
-        font-weight: 600;
+        font-weight: 500;
         font-size: 20px;
-        line-height: 36px;
-        color: #11142d;
-        margin-bottom: 10px;
+        line-height: 30px;
+        color: #19163d;
+        margin-bottom: 8px;
       }
       > .dao-info-item {
         display: flex;
@@ -35,11 +35,17 @@
         font-size: 10px;
         margin-bottom: 8px;
         > .label {
-          color: #808191;
-          margin-right: 2px;
+          font-weight: 500;
+          font-size: 12px;
+          line-height: 18px;
+          color: #8f92a1;
+          margin-right: 4px;
         }
         > .value {
-          color: #11142d;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 21px;
+          color: #19163d;
         }
       }
       > .dao-info-twitter {
@@ -80,11 +86,20 @@
       align-items: center;
       margin-bottom: 20px;
       > p {
-        font-size: 20px;
         font-weight: 500;
+        font-size: 20px;
+        line-height: 30px;
+        /* identical to box height */
+
+        color: #19163d;
       }
       .btn-new-proposal {
-        border-radius: 10px;
+        border-radius: 20px;
+        height: 32px;
+        width: 123px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 18px;
       }
     }
     > .proposal-list {
@@ -92,13 +107,23 @@
       overflow: auto;
       width: 100%;
       > .proposal-detail {
-        border: 1px solid #ccc;
-        padding: 10px;
+        background: #ffffff;
+        box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+        height: 60px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 12px;
+        padding: 0 16px;
         border-radius: 10px;
         margin-bottom: 10px;
         > .proposal-title {
-          font-size: 16px;
           font-weight: 500;
+          font-size: 16px;
+          line-height: 24px;
+          /* identical to box height */
+
+          color: #19163d;
         }
       }
       > div:last-child {
