--- a/src/components/ProposalDetailDialog/index.less
+++ b/src/components/ProposalDetailDialog/index.less
@@ -65,7 +65,13 @@
     flex-direction: column;
   }
   .vote-container {
-    border: 1px solid #dedede;
+    margin-top: 12px;
+    width: 100%;
+    background: #ffffff;
+    /* ✨ Styles/Card shadow 2 */
+
+    box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+    border-radius: 12px;
     border-radius: 8px;
     padding: 20px;
     margin-right: 15px;
@@ -80,11 +86,8 @@
     }
     .vote-btn {
       margin-top: 14px;
-      background: #9d5fe9;
-      box-shadow: 5px 7px 13px rgba(0, 0, 0, 0.16),
-        -3px -3px 8px rgba(174, 174, 174, 0.3);
-      border-radius: 8px;
-      width: 120px;
+      border-radius: 20px;
+      width: 123px;
       height: 32px;
       border: none;
       margin-right: 6px;
