--- a/src/components/ProposalItemStatus/index.less
+++ b/src/components/ProposalItemStatus/index.less
@@ -1,7 +1,7 @@
 .status {
   // background: #ffeaea;
-  border: 2px solid #ffffff;
-  border-radius: 20px;
+  // border: 2px solid #ffffff;
+  border-radius: 22px;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -9,18 +9,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 120px;
-  height: 32px;
-  box-shadow: inset -3px -3px 4px rgba(255, 255, 255, 0.88),
-    inset 2px 2px 7px rgba(73, 103, 134, 0.36);
-  filter: drop-shadow(-1px -1px 4px #ffffff)
-    drop-shadow(0.5px 0.5px 0.5px rgba(0, 0, 0, 0.16));
+  width: 75px;
+  height: 30px;
+  // box-shadow: inset -3px -3px 4px rgba(255, 255, 255, 0.88),
+  //   inset 2px 2px 7px rgba(73, 103, 134, 0.36);
+  // filter: drop-shadow(-1px -1px 4px #ffffff)
+  //   drop-shadow(0.5px 0.5px 0.5px rgba(0, 0, 0, 0.16));
   .dot {
     display: block;
     width: 5px;
     height: 5px;
     border-radius: 50%;
     margin-right: 7px;
+    background-color: #ffffff;
   }
   .text {
     font-family: Poppins;
@@ -28,41 +29,42 @@
     font-weight: 600;
     font-size: 12px;
     line-height: 18px;
-  }
-}
-.soon {
-  background: #d5edff;
-  .dot {
-    background-color: #3898fc;
-  }
-  .text {
-    color: #3898fc;
-  }
-}
-.passed {
-  background: #3898fc;
-  .dot {
-    background-color: #ffffff;
-  }
-  .text {
     color: #ffffff;
   }
 }
+.soon {
+  background: #302cff;
+  // .dot {
+  //   background-color: #3898fc;
+  // }
+  // .text {
+  //   color: #3898fc;
+  // }
+}
+.passed {
+  background: #3898fc;
+  // .dot {
+  //   background-color: #ffffff;
+  // }
+  // .text {
+  //   color: #ffffff;
+  // }
+}
 .notPassed {
-  background: #ffeaea;
-  .dot {
-    background-color: #ff6c68;
-  }
-  .text {
-    color: #ff6c68;
-  }
+  background: #d22323;
+  // .dot {
+  //   background-color: #ff6c68;
+  // }
+  // .text {
+  //   color: #ff6c68;
+  // }
 }
 .open {
-  background: #defde3;
-  .dot {
-    background-color: #30d62c;
-  }
-  .text {
-    color: #30d62c;
-  }
+  background: #23d288;
+  // .dot {
+  //   background-color: #23d288;
+  // }
+  // .text {
+  //   color: #30d62c;
+  // }
 }
