--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -42,6 +42,7 @@ html {
       font-size: 14px;
       line-height: 21px;
       color: #343edf;
+      border: none;
     }
     .ant-modal-content {
       border-radius: 10px;
