--- a/src/pages/proposalCreate/index.less
+++ b/src/pages/proposalCreate/index.less
@@ -51,6 +51,14 @@
   border-radius: 12px;
   height: 48px;
 }
+.proposal-date-picker {
+  background: #ffffff;
+  border: 1px solid #343edf;
+  box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+  border-radius: 12px;
+  height: 48px;
+  width: 100%;
+}
 .proposal-form-selector {
   .ant-select-selector {
     border: 1px solid #343edf !important;
