add list loading

--- a/src/pages/daoDetail/index.less
+++ b/src/pages/daoDetail/index.less
@@ -103,7 +103,7 @@
         line-height: 18px;
       }
     }
-    > .proposal-list {
+    .proposal-list {
       //   height: 360px;
       overflow: auto;
       width: 100%;
