--- a/src/pages/daos/index.less
+++ b/src/pages/daos/index.less
@@ -2,6 +2,7 @@
   padding-left: 0;
   list-style: none;
   margin-bottom: 20px;
+  min-height: 200px;
   .dao-item {
     padding: 10px;
     border-radius: 10px;
@@ -45,4 +46,8 @@
 .daos-pagination {
   display: flex;
   justify-content: flex-end;
+}
+
+.list-loading {
+  margin-top: 80px;
 }
