--- a/src/components/AttributeFormItems/index.less
+++ b/src/components/AttributeFormItems/index.less
@@ -1,21 +1,21 @@
-.proposal-form-items {
+.attribute-form-items {
   .items-input {
-    .attr-item {
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 10px;
-    }
     > input {
       background: #ffffff;
       border: 1px solid #e5e5e5;
       border-radius: 8px;
       height: 40px;
-      margin-right: 15px;
+      margin-right: 10px;
     }
     > .btn-save {
       background-color: #23d288;
       border-color: #23d288;
+      margin-left: 5px;
     }
+  }
+  .btn-add-attr {
+    border: 1px solid #343edf;
+    border-radius: 10px;
   }
   > .items-list {
     > li {
