--- a/src/pages/collectionCreate/index.less
+++ b/src/pages/collectionCreate/index.less
@@ -31,6 +31,7 @@
       width: 140px;
       height: 40px;
       margin-right: 15px;
+      border: 1px solid #343edf;
     }
   }
   > .upload-preview {
