update for bind and unbind

--- a/src/pages/collections/index.less
+++ b/src/pages/collections/index.less
@@ -1,5 +1,6 @@
 .collections-container {
   > .list-header {
+    margin-bottom: 20px;
     > button:first-child {
       margin-right: 20px;
     }
