--- a/src/pages/collectionCreate/index.less
+++ b/src/pages/collectionCreate/index.less
@@ -25,7 +25,9 @@
 }
 .img-upload-container {
   display: flex;
+  flex-direction: column;
   > .img-upload {
+    margin-bottom: 10px;
     button {
       border-radius: 15px;
       width: 140px;
