update collections list

--- a/src/pages/collections/index.less
+++ b/src/pages/collections/index.less
@@ -1,11 +1,16 @@
 .collections-container {
   > .list-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 20px;
-    > button:first-child {
-      margin-right: 20px;
-    }
-    > .btn-create {
-      height: 40px;
+    .list-header-btns {
+      > button:first-child {
+        margin-right: 20px;
+      }
+      > .btn-create {
+        height: 40px;
+      }
     }
   }
 
