--- a/src/pages/daoDetail/index.less
+++ b/src/pages/daoDetail/index.less
@@ -109,6 +109,7 @@
       width: 100%;
       padding-bottom: 10px;
       > .proposal-detail {
+        cursor: pointer;
         background: #ffffff;
         box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
         height: 60px;
