update for tonkeeper

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -28,3 +28,72 @@
   padding-left: 54px;
   margin-bottom: 25px;
 }
+.connect-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.connect-btns {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  > .btn-connect {
+    height: 38px;
+  }
+  > button:first-child {
+    margin-bottom: 20px;
+  }
+}
+
+.login-qrcode {
+  display: flex;
+  justify-content: center;
+  border: 8px solid #343edf;
+  box-shadow: 5px -36px 30px rgb(20 40 80 / 5%);
+  border-radius: 17px;
+  margin-bottom: 35px;
+  padding: 2px;
+  /* padding-top: 2px; */
+  align-items: center;
+}
+
+.login-mobile-btn {
+  width: 273px;
+  height: 50;
+}
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 48px;
+  > .title {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    color: #19163d;
+    margin-bottom: 65px;
+  }
+  > .login-pc {
+  }
+  .text-tip {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+
+    color: #8f92a1;
+
+    mix-blend-mode: normal;
+    opacity: 0.6;
+  }
+}
+.logout-btn {
+  height: 40px;
+  width: 160px;
+}
