--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -207,3 +207,12 @@ html {
     flex-grow: 0;
   }
 }
+.ant-picker-panel-container {
+  .ant-picker-now-btn {
+    font-size: 16px;
+    font-weight: 600;
+    background: #1890ff;
+    color: #fff;
+    padding: 2px 6px;
+  }
+}
