--- a/src/pages/collections/index.less
+++ b/src/pages/collections/index.less
@@ -15,10 +15,16 @@
   }
 
   .collection-list {
+    .ant-spin {
+      margin-left: 50%;
+      transform: translateX(-10px);
+      margin-top: 20px;
+    }
     padding-left: 0;
     list-style: none;
     margin-bottom: 20px;
     min-height: 200px;
+    margin-top: 20px;
     .collection-item {
       padding: 10px;
       border-radius: 10px;
