--- a/src/pages/proposalCreate/index.less
+++ b/src/pages/proposalCreate/index.less
@@ -58,6 +58,10 @@
   border-radius: 12px;
   height: 48px;
   width: 100%;
+  .ant-picker-now-btn {
+    font-size: 16px;
+    font-weight: 700;
+  }
 }
 .proposal-form-selector {
   .ant-select-selector {
