update collections list and doas list

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -51,9 +51,9 @@
   display: flex;
   justify-content: center;
   border: 8px solid #343edf;
-  box-shadow: 5px -36px 30px rgb(20 40 80 / 5%);
+  box-shadow: 5px -36px 30px rgba(20, 40, 80, 0.05);
   border-radius: 17px;
-  margin-bottom: 35px;
+  margin-bottom: 15px;
   padding: 2px;
   /* padding-top: 2px; */
   align-items: center;
