add open chat button

--- a/src/pages/collections/index.less
+++ b/src/pages/collections/index.less
@@ -39,7 +39,7 @@
       border-radius: 12px;
       cursor: pointer;
       :hover {
-        background-color: #ccc;
+        // background-color: #ccc;
       }
       > .collection-logo {
         width: 80px;
