--- a/src/pages/daos/index.less
+++ b/src/pages/daos/index.less
@@ -22,7 +22,7 @@
     border-radius: 12px;
     cursor: pointer;
     :hover {
-      background-color: #ccc;
+      // background-color: #ccc;
     }
     > .dao-logo {
       width: 80px;
