--- a/src/pages/daoDetail/index.less
+++ b/src/pages/daoDetail/index.less
@@ -4,64 +4,77 @@
   width: 100%;
   > .dao-detail-header {
     margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-    > img {
-      width: 80px;
-      height: 80px;
-      margin-right: 19px;
-      border-radius: 20px;
-    }
-    .dao-detail-back {
-      height: 32px;
-      border-radius: 10px;
-    }
-    .dao-detail-info {
-      flex: 1;
-      > .dao-name {
-        font-family: "Poppins";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 30px;
-        color: #19163d;
-        margin-bottom: 8px;
+
+    .btn-open-chat {
+      img {
+        margin-right: 4px;
+        margin-bottom: 2px;
       }
-      > .dao-info-item {
-        display: flex;
-        align-items: center;
-        font-family: "Poppins";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 10px;
-        margin-bottom: 8px;
-        > .label {
+      color: #343edf;
+      border: 1px solid #343edf;
+      border-radius: 9px;
+      margin-top: 10px;
+    }
+    .dao-detail {
+      display: flex;
+      align-items: center;
+      > img {
+        width: 80px;
+        height: 80px;
+        margin-right: 15px;
+        border-radius: 20px;
+      }
+      .dao-detail-back {
+        height: 32px;
+        border-radius: 10px;
+      }
+      .dao-detail-info {
+        flex: 1;
+        > .dao-name {
+          font-family: "Poppins";
+          font-style: normal;
           font-weight: 500;
-          font-size: 12px;
-          line-height: 18px;
-          color: #8f92a1;
-          margin-right: 4px;
-        }
-        > .value {
-          font-weight: 500;
-          font-size: 14px;
-          line-height: 21px;
+          font-size: 20px;
+          line-height: 30px;
           color: #19163d;
+          margin-bottom: 8px;
         }
-      }
-      > .dao-info-twitter {
-        > img {
-          width: 15px;
-          height: 12px;
-          margin-right: 2px;
-        }
-        > span,
-        a {
+        > .dao-info-item {
+          display: flex;
+          align-items: center;
           font-family: "Poppins";
           font-style: normal;
           font-weight: 500;
           font-size: 10px;
-          color: #11142d;
+          margin-bottom: 8px;
+          > .label {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 18px;
+            color: #8f92a1;
+            margin-right: 4px;
+          }
+          > .value {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 21px;
+            color: #19163d;
+          }
+        }
+        > .dao-info-twitter {
+          > img {
+            width: 15px;
+            height: 12px;
+            margin-right: 2px;
+          }
+          > span,
+          a {
+            font-family: "Poppins";
+            font-style: normal;
+            font-weight: 500;
+            font-size: 10px;
+            color: #11142d;
+          }
         }
       }
     }
