add launchpad deploy

--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -216,3 +216,20 @@ html {
     padding: 2px 6px;
   }
 }
+
+.ant-input-number,
+.common-date-picker,
+.dao-form-input {
+  border: 1px solid #343edf !important;
+  box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08) !important;
+  border-radius: 12px !important;
+  height: 48px !important;
+  width: 100% !important;
+}
+
+.dao-form-input {
+  .ant-input-number-input {
+    height: 48px;
+    border-radius: 12px;
+  }
+}
