add claim sold api

--- a/src/pages/daoDetail/index.less
+++ b/src/pages/daoDetail/index.less
@@ -2,9 +2,10 @@
   height: 100%;
   // overflow: auto;
   width: 100%;
-  > .dao-detail-header {
-    margin-bottom: 30px;
-
+  .launchpad-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
     .btn-open-chat {
       img {
         margin-right: 4px;
@@ -13,8 +14,11 @@
       color: #343edf;
       border: 1px solid #343edf;
       border-radius: 9px;
-      margin-top: 10px;
     }
+  }
+  > .dao-detail-header {
+    margin-bottom: 30px;
+
     .dao-detail {
       display: flex;
       align-items: center;
