--- a/src/pages/launchPad/detail/index.less
+++ b/src/pages/launchPad/detail/index.less
@@ -3,23 +3,23 @@
   box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
   margin-bottom: 10px;
   width: 100%;
-  .launchpad-info-item {
-    display: flex;
-    align-items: center;
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    margin-bottom: 8px;
-    > .label {
-      color: #8f92a1;
-    }
-    > .value {
-      color: #19163d;
-    }
+}
+.launchpad-info-item {
+  display: flex;
+  align-items: center;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 8px;
+  > .label {
+    color: #8f92a1;
+    margin-right: 5px;
+  }
+  > .value {
+    color: #19163d;
   }
 }
-
 .launchpad-user-controls {
   padding: 15px;
   box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
@@ -30,8 +30,12 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    > button {
+      height: 38px;
+      width: 120px;
+    }
     .btn-buy {
-      margin-bottom: 10px;
+      margin-right: 15px;
     }
   }
 }
@@ -46,8 +50,18 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    > button {
+      width: 220px;
+      height: 38px;
+    }
     > button:first-of-type {
+      margin-right: 10px;
       margin-bottom: 10px;
+    }
+    .btn-claim-jetton {
+      margin-right: 15px;
+    }
+    .btn-claim-source {
     }
   }
 }
