update launchpad list

--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -233,3 +233,12 @@ html {
     border-radius: 12px;
   }
 }
+
+.list-end-text {
+  text-align: center;
+  margin-top: 15px;
+  > b {
+    color: #8f92a1;
+    font-size: 12px;
+  }
+}
