update launchpad detail ui

--- a/src/pages/launchPad/detail/index.less
+++ b/src/pages/launchPad/detail/index.less
@@ -18,6 +18,11 @@
   }
   > .value {
     color: #19163d;
+    text-align: right;
+  }
+  > .value-link {
+    color: #1890ff;
+    cursor: pointer;
   }
 }
 .launchpad-user-controls {
