update launchpad detail ui

--- a/src/pages/launchPad/detail/index.less
+++ b/src/pages/launchPad/detail/index.less
@@ -56,15 +56,13 @@
     justify-content: center;
     align-items: center;
     > button {
-      width: 220px;
+      //   width: 220px;
       height: 38px;
     }
     > button:first-of-type {
-      margin-right: 10px;
       margin-bottom: 10px;
     }
     .btn-claim-jetton {
-      margin-right: 15px;
     }
     .btn-claim-source {
     }
