--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -242,3 +242,11 @@ html {
     font-size: 12px;
   }
 }
+
+.custom-form-label {
+  display: flex;
+  align-items: center;
+  > span {
+    margin-right: 3px;
+  }
+}
