--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -32,6 +32,7 @@ html {
       line-height: 21px;
       color: #ffffff;
       height: 50px;
+      border: none;
     }
     .default-btn {
       background: #f8f9ff;
