--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -28,22 +28,25 @@
   padding-left: 54px;
   margin-bottom: 25px;
 }
-.connect-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
 
 .connect-btns {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  > .btn-connect {
-    height: 38px;
-  }
-  > button:first-child {
-    margin-bottom: 20px;
+  margin-top: 180px;
+
+  > button {
+    height: 40px !important;
+    display: block;
+    margin: auto;
+    margin-bottom: 16px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    border: none;
+    padding-left: 32px;
+    padding-right: 32px;
+    background: #343edf;
+    border-radius: 20px;
   }
 }
 
@@ -96,4 +99,24 @@
 .logout-btn {
   height: 40px;
   width: 160px;
+}
+
+.connect-container {
+  padding-top: 90px;
+  height: 100vh;
+  background-color: #f8f9ff;
+  background-image: url(/img-welcome-bg.png);
+  background-size: contain;
+  box-shadow: 8px 8px 20px rgba(137, 137, 137, 0.25);
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+.img-welcome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px;
+  height: 110px;
+  display: block;
+  margin: 0 auto;
 }
