--- a/src/pages/launchPad/list/index.less
+++ b/src/pages/launchPad/list/index.less
@@ -6,9 +6,28 @@
     }
   }
 }
+.list-item {
+  padding: 10px;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  background: #ffffff;
+  box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+  border-radius: 12px;
+
+  width: 100%;
+  justify-content: space-between;
+}
+.launchpad-link {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+}
 .launchpad-list-item {
   display: flex;
   flex-direction: column;
+  cursor: pointer;
   > p {
     overflow: hidden;
     word-break: break-all;
