--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -72,6 +72,11 @@
       margin-bottom: 16px;
       height: 40px;
     }
+    .action-btn {
+      width: 155px;
+      margin-bottom: 16px;
+      height: 40px;
+    }
     .logout-btn {
       background: #ffffff;
     }
