--- a/src/pages/launchPad/list/index.less
+++ b/src/pages/launchPad/list/index.less
@@ -1,9 +1,25 @@
 .launchpad-list-container {
   > .launchpad-btns-container {
-    > .btn-deploy-launchpad {
-      height: 32px;
-      margin-bottom: 10px;
-    }
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+  }
+}
+.btn-deploy-launchpad {
+  height: 40px !important;
+  margin-bottom: 10px;
+  padding: 0 24px;
+}
+.launchpad-list-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 70px;
+  > img {
+    width: 290px;
+    height: 250px;
+    margin-bottom: 10px;
   }
 }
 .list-item {
