--- a/src/pages/daoDetail/index.less
+++ b/src/pages/daoDetail/index.less
@@ -1,11 +1,49 @@
 .dao-detail-container {
   height: 100%;
   // overflow: auto;
+  position: relative;
   width: 100%;
+  .page-title {
+    color: #ffffff !important;
+  }
+  .upper-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    background: #343edf;
+    border-radius: 0px 0px 24px 24px;
+    z-index: -1;
+  }
   .launchpad-container {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+    .link-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 28px;
+      cursor: pointer;
+      > img {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 6px;
+      }
+      > span {
+        font-family: "Poppins";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 18px;
+        color: #fefefe;
+      }
+    }
+    div.link-item:last-of-type {
+      margin-right: 0;
+    }
     .btn-open-chat {
       img {
         margin-right: 4px;
@@ -40,7 +78,7 @@
           font-weight: 500;
           font-size: 20px;
           line-height: 30px;
-          color: #19163d;
+          color: #ffffff;
           margin-bottom: 8px;
         }
         > .dao-info-item {
@@ -51,18 +89,18 @@
           font-weight: 500;
           font-size: 10px;
           margin-bottom: 8px;
+          color: #ffffff;
+
           > .label {
             font-weight: 500;
             font-size: 12px;
             line-height: 18px;
-            color: #8f92a1;
             margin-right: 4px;
           }
           > .value {
             font-weight: 500;
             font-size: 14px;
             line-height: 21px;
-            color: #19163d;
           }
         }
         > .dao-info-twitter {
