add ido campaigns

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -64,13 +64,14 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
-    > button:first-of-type {
-      background: #ffffff;
-    }
+
     .bind-btn {
       width: 273px;
       margin-bottom: 16px;
       height: 40px;
+    }
+    .unbind-btn {
+      background: #ffffff;
     }
     .action-btn {
       width: 155px;
