--- a/src/pages/campaign/list/index.less
+++ b/src/pages/campaign/list/index.less
@@ -56,7 +56,8 @@
           line-height: 15px;
           color: #888888;
         }
-        > a {
+        > link {
+          cursor: pointer;
           font-weight: 400;
           font-size: 10px;
           line-height: 15px;
