add proposal comments support

--- a/src/components/ProposalDetailDialog/index.less
+++ b/src/components/ProposalDetailDialog/index.less
@@ -100,3 +100,11 @@
     max-width: 360px;
   }
 }
+
+.comment {
+  margin-top: 15px;
+  .comment-error {
+    color: red;
+    font-size: 12px;
+  }
+}
