--- a/src/pages/campaign/list/index.less
+++ b/src/pages/campaign/list/index.less
@@ -4,7 +4,6 @@
   }
 
   .campaign-item {
-    cursor: pointer;
     background: #ffffff;
     box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
     border-radius: 12px;
@@ -27,6 +26,7 @@
       color: #ffffff;
     }
     > img {
+      cursor: pointer;
       width: 100%;
       max-width: 150px;
       margin-bottom: 16px;
@@ -56,7 +56,7 @@
           line-height: 15px;
           color: #888888;
         }
-        > link {
+        > .link {
           cursor: pointer;
           font-weight: 400;
           font-size: 10px;
