--- a/src/pages/collections/index.less
+++ b/src/pages/collections/index.less
@@ -13,6 +13,17 @@
       }
     }
   }
+  .search-container {
+    position: relative;
+    .icon-search {
+      position: absolute;
+      left: 16px;
+      top: 14px;
+      width: 20px;
+      height: 20px;
+      z-index: 100;
+    }
+  }
 
   .collection-list {
     .ant-spin {
