--- a/src/pages/collections/index.less
+++ b/src/pages/collections/index.less
@@ -36,6 +36,9 @@
     margin-bottom: 20px;
     min-height: 200px;
     margin-top: 20px;
+    li {
+      padding: 5px;
+    }
     .collection-item {
       padding: 10px;
       border-radius: 10px;
@@ -46,7 +49,7 @@
       background: #ffffff;
       /* ✨ Styles/Card shadow 2 */
 
-      box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.08);
+      box-shadow: 0px 4px 10px rgba(56, 68, 251, 0.2);
       border-radius: 12px;
       // cursor: pointer;
       justify-content: space-between;
