--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -6,6 +6,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  .ant-spin-nested-loading {
+    width: 100%;
+  }
   .home-content {
     width: 100%;
     padding-top: 90px;
